chore(jans-core): replace references to Java 16 features causing the build to break #8254 (#8255)
* fix(jans-linux-setup): improper scim configuration for jans kc #8210
* updated the keycloak configuration file to reflect the  configuration for the storage-spi

Signed-off-by: Rolain Djeumen <uprightech@gmail.com>

* chore(jans-core): replace references to java 16 features causing build failure. #8254
* removed references to `java.util.Stream.toList()`

Signed-off-by: Rolain Djeumen <uprightech@gmail.com>

---------

Signed-off-by: Rolain Djeumen <uprightech@gmail.com>
Former-commit-id: 97b88f8fa0f459bd8d8aeaf45ee51d7532f19f23